--- a/Core/Helpers/ErrorMessages.resx
+++ b/Core/Helpers/ErrorMessages.resx
@@ -117,8 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ErrorLogin" xml:space="preserve">
+    <value>Invalid user</value>
+  </data>
   <data name="ErrorLoginorPassword" xml:space="preserve">
     <value>Invalid user or password</value>
+  </data>
+  <data name="ErrorPassword" xml:space="preserve">
+    <value>Password incorrect</value>
   </data>
   <data name="ProductNotFound" xml:space="preserve">
     <value>Product Not Found</value>
